apps/apps/onedev/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onedev-ingress
  namespace: onedev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "session-sticky"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - onedev.beutra.fr
      secretName: onedev-tls
  rules:
    - host: onedev.beutra.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onedev
                port:
                  number: 80
